--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,19 @@ dependencies = [
     "asyncpg>=0.31.0",
     "beautifulsoup4>=4.14.3",
     "fastapi>=0.124.0",
+    "greenlet>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
     "python-jose[cryptography]>=3.5.0",
     "ruff>=0.14.8",
+    "sqlalchemy>=2.0.44",
     "tortoise-orm>=0.25.1",
-    "uvicorn>=0.38.0",
+    "uvicorn[standard]>=0.38.0",
 ]
+
+[tool.aerich]
+tortoise_orm = "app.db.base.TORTOISE_ORM"
+location = "./migrations"
+src_folder = "./."
