--- a/.gitignore
+++ b/.gitignore
@@ -311,6 +311,10 @@ cython_debug/
 .idea/
 .idea*
 
+# Visual Studio Code
+.vscode
+.vscode/*
+
 ### Python Patch ###
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
