🔧chore: Add migrations file

--- a/.gitignore
+++ b/.gitignore
@@ -351,4 +351,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Migrated models
+migrations
+migrations/*
+
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,macos,windows
